@@ -3,13 +3,10 @@
 #include "alloc.h"
 #include "byte.h"
 
-int alloc_re(x,m,n)
-char **x;
-unsigned int m;
-unsigned int n;
+int alloc_re(char **x,unsigned int m,unsigned int n)
 {
   char *y;
-
+ 
   y = alloc(n);
   if (!y) return 0;
   byte_copy(y,m,*x);
