@@ -40,7 +40,7 @@ int buffer_feed(buffer *s)
 int buffer_bget(buffer *s,char *buf,unsigned int len)
 {
   int r;
-
+ 
   if (s->p > 0) return getthis(s,buf,len);
   if (s->n <= len) return oneread(s->op,s->fd,buf,s->n);
   r = buffer_feed(s); if (r <= 0) return r;
@@ -50,7 +50,7 @@ int buffer_bget(buffer *s,char *buf,unsigned int len)
 int buffer_get(buffer *s,char *buf,unsigned int len)
 {
   int r;
-
+ 
   if (s->p > 0) return getthis(s,buf,len);
   if (s->n <= len) return oneread(s->op,s->fd,buf,len);
   r = buffer_feed(s); if (r <= 0) return r;
