@@ -25,7 +25,7 @@ static int allwrite(int (*op)(int,char *,unsigned int),int fd,const char *buf,un
 int buffer_flush(buffer *s)
 {
   int p;
-
+ 
   p = s->p;
   if (!p) return 0;
   s->p = 0;
@@ -35,7 +35,7 @@ int buffer_flush(buffer *s)
 int buffer_putalign(buffer *s,const char *buf,unsigned int len)
 {
   unsigned int n;
-
+ 
   while (len > (n = s->n - s->p)) {
     byte_copy(s->x + s->p,n,buf); s->p += n; buf += n; len -= n;
     if (buffer_flush(s) == -1) return -1;
@@ -49,7 +49,7 @@ int buffer_putalign(buffer *s,const char *buf,unsigned int len)
 int buffer_put(buffer *s,const char *buf,unsigned int len)
 {
   unsigned int n;
-
+ 
   n = s->n;
   if (len > n - s->p) {
     if (buffer_flush(s) == -1) return -1;
