@@ -2,10 +2,7 @@
 
 #include "byte.h"
 
-void byte_copy(to,n,from)
-register char *to;
-register unsigned int n;
-register char *from;
+void byte_copy(register char *to,register unsigned int n,register char *from)
 {
   for (;;) {
     if (!n) return; *to++ = *from++; --n;
