@@ -5,7 +5,7 @@
 int main()
 {
   sigset_t ss;
-
+ 
   sigemptyset(&ss);
   sigaddset(&ss,SIGCHLD);
   sigprocmask(SIG_SETMASK,&ss,(sigset_t *) 0);
