@@ -1,3 +1,8 @@
+  * alloc.c, alloc_re.c, buffer_0.c, buffer_get.c, buffer_put.c, byte_chr.c,
+    byte_copy.c, byte_cr.c, byte_diff.c, byte_rchr.c, byte_zero.c, error.c,
+    error.h, print-cc.sh, print-ld.sh, select.h2, strerr_die.c, taia_sub.c,
+    trysgprm.c, wait.h, wait_nohang.c, wait_pid.c: sync daemontools library
+    fork with runit source.
   * tcpsvd.c, udpsvd.c: use parameter name "unused" in sighandler functions.
   * hasflock.h1: add #include <unistd.h>.
   * doc/*.html: !DOCTYPE.
